Use latest texmath.

--- a/stack.yaml
+++ b/stack.yaml
@@ -23,6 +23,7 @@ extra-deps:
   commit: 596872a5a5dec15f4c8848cf87dd72e0ef2f160d
 - haddock-library-1.6.0
 - HsYAML-0.1.1.1
+- texmath-0.11.1
 - yaml-0.9.0
 ghc-options:
    "$locals": -fhide-source-paths -XNoImplicitPrelude
