--- a/stack.lts9.yaml
+++ b/stack.lts9.yaml
@@ -10,11 +10,11 @@ flags:
     debug: false
 packages:
 - '.'
+- github: jgm/pandoc-citeproc
+  commit: 596872a5a5dec15f4c8848cf87dd72e0ef2f160d
 extra-deps:
 - hslua-0.9.5.1
 - hslua-module-text-0.1.2.1
-- skylighting-0.7.0.2
-- skylighting-core-0.7.0.2
 - ansi-terminal-0.8.0.2
 - cmark-gfm-0.1.3
 - QuickCheck-2.11.3
@@ -22,11 +22,16 @@ extra-deps:
 - tasty-quickcheck-0.9.1
 - doctemplates-0.2.2.1
 - hs-bibutils-6.6.0.0
-- pandoc-citeproc-0.14.3.1
 - tagsoup-0.14.6
 - pandoc-types-1.17.5.1
 - haddock-library-1.6.0
 - texmath-0.11.1
 - HsYAML-0.1.1.1
 - text-1.2.3.0
+- Cabal-2.4.0.0
+- dlist-0.8.0.4
+- parsec-3.1.13.0
+- skylighting-core-0.7.3
+- skylighting-0.7.3
+- yaml-0.9.0
 resolver: lts-9.14
