Linux Dockerfile: try upgrading stack.

--- a/linux/Dockerfile
+++ b/linux/Dockerfile
@@ -9,6 +9,8 @@ ENV PATH="/usr/local/bin:${PATH}"
 RUN ulimit -n 4096
 RUN stack config set system-ghc --global true
 RUN stack setup --resolver lts-12
+# Upgrade to latest stack...
+RUN stack install stack
 RUN mkdir -p /usr/src/
 WORKDIR /usr/src/
 RUN git clone https://github.com/jgm/pandoc
