--- a/stack.yaml
+++ b/stack.yaml
@@ -24,6 +24,8 @@ extra-deps:
 - HsYAML-0.1.1.1
 - texmath-0.11.1
 - yaml-0.9.0
+- hslua-1.0.0
+- hslua-module-text-0.2.0
 ghc-options:
    "$locals": -fhide-source-paths -XNoImplicitPrelude
 resolver: lts-12.6
