--- a/stack.lts10.yaml
+++ b/stack.lts10.yaml
@@ -25,6 +25,8 @@ extra-deps:
 - HsYAML-0.1.1.1
 - text-1.2.3.0
 - hs-bibutils-6.6.0.0
+- hslua-1.0.0
+- hslua-module-text-0.2.0
 ghc-options:
    "$locals": -fhide-source-paths -XNoImplicitPrelude
 resolver: lts-10.10
