--- a/stack.lts9.yaml
+++ b/stack.lts9.yaml
@@ -33,4 +33,6 @@ extra-deps:
 - skylighting-core-0.7.3
 - skylighting-0.7.3
 - yaml-0.9.0
+- hslua-1.0.0
+- hslua-module-text-0.2.0
 resolver: lts-9.14
