--- a/appveyor.yml
+++ b/appveyor.yml
@@ -60,7 +60,7 @@ build: off
 
 install:
   - choco install wixtoolset %CHOCO_OPTS%
-  - if "%BUILD_TYPE" == "stack" (
+  - if "%BUILD_TYPE%" == "stack" (
       choco install haskell-stack %CHOCO_OPTS%
     ) else (
       choco install ghc --version %GHC_VERSION% %CHOCO_OPTS%
@@ -72,7 +72,7 @@ test_script:
   # The ugly echo "" hack is to avoid complaints about 0 being an invalid file
   # descriptor
   - |
-      if "%BUILD_TYPE" == "stack" (
+      if "%BUILD_TYPE%" == "stack" (
         stack --version
         stack path
         echo "" | stack clean
