appveyor - use verbose for choco install  ghc.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -67,8 +67,8 @@ install:
       choco install haskell-stack %CHOCO_OPTS%
     )
   - if "%BUILD_TYPE%" == "cabal" (
-      choco install -y ghc --version %GHC_VERSION% --ignore-dependencies %CHOCO_OPTS% &&
-      choco install -y cabal --version %CABAL_VERSION% --ignore-dependencies %CHOCO_OPTS%
+      choco install --verbose ghc --version %GHC_VERSION% --ignore-dependencies %CHOCO_OPTS% &&
+      choco install cabal --version %CABAL_VERSION% --ignore-dependencies %CHOCO_OPTS%
     )
 
 # before_test:
