--- a/appveyor.yml
+++ b/appveyor.yml
@@ -68,8 +68,7 @@ install:
     )
   - if "%BUILD_TYPE%" == "cabal" (
       choco install ghc --version %GHC_VERSION% --ignore-dependencies %CHOCO_OPTS% &&
-      choco install cabal --version %CABAL_VERSION% --ignore-dependencies %CHOCO_OPTS% &&
-      set PATH=C:\ProgramData\chocolatey\lib\ghc\tools\ghc-8.6.1\bin;"%PATH%"
+      choco install cabal --version %CABAL_VERSION% --ignore-dependencies %CHOCO_OPTS%
     )
 
 # before_test:
@@ -85,10 +84,9 @@ test_script:
     )
   - if "%BUILD_TYPE%" == "cabal" (
         cabal --version &&
-        echo "%PATH%" &&
         ghc --version &&
         cabal --store-dir="%CABAL_STORE%" new-update &&
-        cabal --store-dir="%CABAL_STORE%" new-install --symlink-bindir=. %CABAL_BUILD_OPTS% . pandoc-citeproc
+        cabal --store-dir="%CABAL_STORE%" new-install -w C:\ProgramData\chocolatey\lib\ghc\tools\ghc-8.6.1\bin\ghc.exe --symlink-bindir=. %CABAL_BUILD_OPTS% . pandoc-citeproc
     )
 
 after_test:
