--- a/appveyor.yml
+++ b/appveyor.yml
@@ -50,7 +50,7 @@ matrix:
 
 cache:
   - "%STACK_ROOT%"
-  #- "%CABAL_STORE%"
+  - "%CABAL_STORE%"
   # This is where stack install ghc by default, but we don't
   # cache it because it's too large:
   # - "c:\\Users\\appveyor\\AppData\\Local\\Programs\\stack"
@@ -84,8 +84,8 @@ test_script:
     )
   - if "%BUILD_TYPE%" == "cabal" (
         cabal --version &&
-        cabal new-update &&
-        cabal new-install -w C:\ProgramData\chocolatey\lib\ghc\tools\ghc-8.6.1\bin\ghc.exe --symlink-bindir=. %CABAL_BUILD_OPTS% . pandoc-citeproc
+        cabal --store-dir="%CABAL_STORE%" new-update &&
+        cabal --store-dir="%CABAL_STORE%" new-install -w C:\ProgramData\chocolatey\lib\ghc\tools\ghc-8.6.1\bin\ghc.exe --symlink-bindir=. %CABAL_BUILD_OPTS% . pandoc-citeproc
     )
 
 after_test:
