--- a/appveyor.yml
+++ b/appveyor.yml
@@ -87,8 +87,8 @@ test_script:
   - if "%BUILD_TYPE%" == "cabal" (
         cabal --version &&
         mkdir -p "%CABAL_STORE%"/ghc-8.6.1/package.db &&
+        git clone https://github.com/jgm/pandoc-citeproc &&
         cabal --store-dir="%CABAL_STORE%" new-update &&
-        cabal unpack pandoc-citeproc-0.14.4 &&
         cabal --store-dir="%CABAL_STORE%" new-build -w %GHC% --allow-newer -flua_32bits -fembed_data_files . pandoc-citeproc &&
         forfiles /P .\dist-newstyle /M pandoc*.exe /C "cmd /C cp @file .\windows\ "
     )
